# alfa-copilot

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy-pages.yml
docs/: VALIDATION.md  frontend.md
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/app/styles/: global.css  tokens.css
frontend/src/entities/analysis/: index.ts
frontend/src/entities/analysis/model/: analysisStream.test.ts  analysisStream.ts  classifyRisk.ts  computeDiagnostics.ts  financialMath.test.ts  forecastCashGap.ts  mockCopilotNarrator.test.ts  mockCopilotNarrator.ts  types.ts
frontend/src/entities/transaction/: index.ts
frontend/src/entities/transaction/model/: buildDailyBalances.ts  generateTransactions.test.ts  generateTransactions.ts  types.ts
frontend/src/features/run-analysis/: index.ts
frontend/src/features/run-analysis/model/: useAnalysisRun.ts
frontend/src/features/run-analysis/ui/: RunAnalysisButton.tsx
frontend/src/pages/dashboard/: DashboardPage.test.tsx  DashboardPage.tsx  index.ts
frontend/src/shared/config/: index.ts  scenario.ts
frontend/src/shared/lib/: dates.ts  formatMoney.ts  index.ts  seededRandom.test.ts  seededRandom.ts
frontend/src/shared/ui/: Card.tsx
frontend/src/widgets/balance-chart/: index.ts
frontend/src/widgets/balance-chart/model/: chartGeometry.ts
frontend/src/widgets/balance-chart/ui/: BalanceChart.tsx
frontend/src/widgets/copilot-feed/: CopilotFeed.test.tsx  index.ts
frontend/src/widgets/copilot-feed/model/: buildFeedItems.ts
frontend/src/widgets/copilot-feed/ui/: CopilotFeed.tsx  StepResultBody.tsx
frontend/src/widgets/header/: index.ts
frontend/src/widgets/header/ui/: AppHeader.tsx
proto/: README.md
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/financial-engine/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile
services/gateway/: Cargo.toml  Dockerfile
